--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,45 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".main.ui.MainActivity">
+        <Button
+                android:text="@string/return_select_device"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/btReturnSelectDevice"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                style="@android:style/Widget.Material.Button"/>
+    <Button
+            android:text="@string/alert"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:id="@+id/btAlert"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
+            style="@android:style/Widget.Material.Button"
+            android:background="@android:color/holo_red_dark" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:textSize="36sp"
+            android:clickable="false" android:textColor="?attr/colorBackgroundFloating"/>
+        <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_lab_to_send" android:textAlignment="viewStart"/>
+        </com.google.android.material.textfield.TextInputLayout>
+        <Button
+                android:text="@string/finish_alert"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button4" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/btAlert" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
